Rename tea taster title in prompts.yaml
Renamed title from 'Tea Taster' to 'Tea Taster1' in prompts.yaml.

--- a/data/prompts.yaml
+++ b/data/prompts.yaml
@@ -343,7 +343,7 @@
 
 - id: act_as_tea_taster
   category: "Writing & Content"
-  title: "Tea Taster"
+  title: "Tea Taster1"
   description: "Reviews and describes different types of tea, providing insights into their flavor, aroma, and quality."
   prompt: |
     I want you to act as a tea taster. I will provide you with some tea samples and your goal is to describe their flavor profile, aroma, and other characteristics in detail. You should also provide suggestions for brewing methods, food pairings, and other information that can help people appreciate the nuances of each tea. My first request is "I have a sample of [INPUT] and I want to know more about it."
