feat(data): add 1000+ new prompts across all categories
Expand the prompt library with over 1000 new entries spanning all
existing categories including programming, writing, business, education,
career, marketing, image generation, video, music, and voice prompts.

Key additions include:
- Hundreds of new programming and technical prompts covering DevOps,
  security, frontend/backend development, and AI tooling
- New writing prompts for content creation, translation, and analysis
- Business strategy prompts including financial analysis and planning
- Career development prompts for resume review and job applications
- Image generation prompts for photography, product, and concept art
- Marketing and SEO strategy prompts
- Music composition and genre prompts
- Voice character and dubbing prompts
- Populate previously empty categories: Logos & Branding, Video Prompts,
  Cinematic Styles, Sound Effects, Voiceovers, Characters & Acting,
  and Dubbing & Localization

Also fixes a duplicate ID conflict by renaming `sadie_sink_jean_grey`
to `sadie_sink_jean_grey_2` in prompts.yaml.

--- a/data/prompts.yaml
+++ b/data/prompts.yaml
@@ -2914,7 +2914,7 @@
     Golden-hour sunlight with warm skin tones, soft sea breeze subtly moving hair and fabric, realistic skin texture, no retouching.
     DSLR photo, 85mm lens, f/2.8, shallow depth of field, high dynamic range, travel editorial style, sharp facial focus, cinematic framing.
 
-- id: sadie_sink_jean_grey
+- id: sadie_sink_jean_grey_2
   category: "Product & E-commerce"
   title: "Cinematic Concept Art of Sadie Sink as Jean Grey"
   description: "Creates a cinematic 3D render or concept art of Sadie Sink portraying Jean Grey with three distinct costume variants."
